--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/users?useUnicode=true&useSSL=t
 spring.datasource.username=root
 spring.datasource.password=159951Atuan159!
 
+server.port=8080
